tests/semantic/number_constants/number_constants.err
Error: int out of range in file number_constants.dl at line 17
R(-2147483648). // error: out of range
---^-----------------------------------
Error: int out of range in file number_constants.dl at line 18
R(- 2147483648). // error: out of range
----^-----------------------------------
Error: int out of range in file number_constants.dl at line 29
R(2147483647-2147483648). // error: out of range
-------------^-----------------------------------
Error: int out of range in file number_constants.dl at line 30
R(2147483647- 2147483648). // error: out of range
--------------^-----------------------------------
Error: int out of range in file number_constants.dl at line 31
R(2147483647 -2147483648). // error: out of range
--------------^-----------------------------------
Error: int out of range in file number_constants.dl at line 32
R(2147483647 - 2147483648). // error: out of range
---------------^-----------------------------------
6 errors generated, evaluation aborted
