tests/semantic/number_constants/number_constants.dl

.decl R(n:number) output

R(0).

R(1).

R(-1).
R(- 1).

R(2147483646).
R(2147483647). // error: out of range

R(-2147483647).
R(- 2147483647).

R(-2147483648). // error: out of range
R(- 2147483648). // error: out of range

R(2147483646--2147483647).
R(2147483646 --2147483647).
R(2147483646- -2147483647).
R(2147483646-- 2147483647).
R(2147483646 - -2147483647).
R(2147483646- - 2147483647).
R(2147483646 -- 2147483647).
R(2147483646 - - 2147483647).

R(2147483647-2147483648). // error: out of range
R(2147483647- 2147483648). // error: out of range
R(2147483647 -2147483648). // error: out of range
R(2147483647 - 2147483648). // error: out of range
